# SLR

./: .gitignore  CMakeLists.txt  README.md  SLR.sln
HostProgram/: CMakeLists.txt  StopWatch.h  main.cpp
libSLR/: CMakeLists.txt  debugPrintf.cpp  declarations.h  defines.h  devPrintf.cpp  references.h
libSLR/Accelerator/: BBVH.h  QBVH.h  SBVH.h  StandardBVH.h
libSLR/BSDF/: AshikhminShirleyBRDF.cpp  AshikhminShirleyBRDF.h  ModifiedWardDurBRDF.cpp  ModifiedWardDurBRDF.h  MultiBSDF.cpp  MultiBSDF.h  OrenNayerBRDF.cpp  OrenNayerBRDF.h  basic_bsdfs.cpp  basic_bsdfs.h  bsdf_headers.h  disney_bsdfs.cpp  disney_bsdfs.h  microfacet_bsdfs.cpp  microfacet_bsdfs.h
libSLR/BSDFs/: AshikhminBRDF.cpp  AshikhminBRDF.h  AshikhminShirleyBRDF.cpp  AshikhminShirleyBRDF.h  MicrofacetBSDF.cpp  MicrofacetBSDF.h  ModifiedWardDurBRDF.cpp  ModifiedWardDurBRDF.h  MultiBSDF.cpp  MultiBSDF.h  OrenNayerBRDF.cpp  OrenNayerBRDF.h  basic_BSDFs.cpp  basic_BSDFs.h
libSLR/BasicTypes/: BoundingBox3.cpp  BoundingBox3.h  BoundingBox3D.cpp  BoundingBox3D.h  CompensatedSum.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Normal3.cpp  Normal3.h  Normal3D.cpp  Normal3D.h  Point3.cpp  Point3.h  Point3D.cpp  Point3D.h  Quaternion.cpp  Quaternion.h  RGBTypes.cpp  RGBTypes.h  Ray.cpp  Ray.h  Spectrum.cpp  Spectrum.h  SpectrumType.cpp  SpectrumTypes.h  TexCoord2.cpp  TexCoord2.h  TexCoord2D.cpp  TexCoord2D.h  Vector3.cpp  Vector3.h  Vector3D.cpp  Vector3D.h  Vector4.cpp  Vector4.h  Vector4D.cpp  Vector4D.h  common_spectra.cpp  (+9 more)
libSLR/Camera/: EquirectangularCamera.cpp  EquirectangularCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
libSLR/Cameras/: EquirectangularCamera.cpp  EquirectangularCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
libSLR/Core/: Accelerator.cpp  Accelerator.h  Image.cpp  Image.h  ImageSensor.cpp  ImageSensor.h  LinearCongruentialRNG.cpp  LinearCongruentialRNG.h  MediumObject.cpp  MediumObject.h  Object.cpp  Object.h  ProgressReporter.cpp  ProgressReporter.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  RenderSettings.cpp  RenderSettings.h  Renderer.h  Scene.cpp  Scene.h  SurfaceObject.cpp  SurfaceObject.h  Transform.cpp  Transform.h  XORShift.cpp  XORShift.h  XORShiftRNG.cpp  XORShiftRNG.h  accelerator.cpp  accelerator.h  camera.cpp  camera.h  cameras.cpp  cameras.h  directional_distribution_functions.cpp  directional_distribution_functions.h  distributions.cpp  distributions.h  geometry.cpp  (+24 more)
libSLR/EDF/: IBLEDF.cpp  IBLEDF.h  MultiEDF.cpp  MultiEDF.h  basic_edfs.cpp  basic_edfs.h
libSLR/EDFs/: IBLEDF.cpp  IBLEDF.h  MultiEDF.cpp  MultiEDF.h  basic_EDFs.cpp  basic_EDFs.h
libSLR/Helper/: ThreadPool.h  bmp_exporter.cpp  bmp_exporter.h
libSLR/Medium/: DensityGridMedium.cpp  DensityGridMedium.h  GridMedium.cpp  GridMedium.h  HomogeneousMedium.cpp  HomogeneousMedium.h
libSLR/MediumDistribution/: CloudMediumDistribution.cpp  CloudMediumDistribution.h  DensityGridMediumDistribution.cpp  DensityGridMediumDistribution.h  GridMediumDistribution.cpp  GridMediumDistribution.h  HomogeneousMediumDistribution.cpp  HomogeneousMediumDistribution.h  VacuumMediumDistribution.cpp  VacuumMediumDistribution.h
libSLR/MediumMaterial/: basic_medium_materials.cpp  basic_medium_materials.h  medium_material_headers.h
libSLR/MediumMaterials/: basic_MediumMaterials.cpp  basic_MediumMaterials.h  medium_material_headers.h
libSLR/Memory/: Allocator.h  ArenaAllocator.cpp  ArenaAllocator.h  MSpaceAllocator.cpp  StackAllocator.cpp
libSLR/MemoryAllocators/: Allocator.h  ArenaAllocator.cpp  ArenaAllocator.h  MSpaceAllocator.cpp  MSpaceAllocator.h  StackAllocator.cpp  StackAllocator.h  dlmalloc.c  dlmalloc.h
libSLR/PhaseFunction/: basic_phase_functions.cpp  basic_phase_functions.h
libSLR/PhaseFunctions/: basic_phase_functions.cpp  basic_phase_functions.h
libSLR/RNG/: LinearCongruentialRNG.cpp  LinearCongruentialRNG.h  XORShiftRNG.cpp  XORShiftRNG.h
libSLR/RNGs/: LinearCongruentialRNG.h  XORShiftRNG.h
libSLR/Renderer/: AMCMCPPMRenderer.cpp  AMCMCPPMRenderer.h  BPTRenderer.cpp  BPTRenderer.h  DebugRenderer.cpp  DebugRenderer.h  PTRenderer.cpp  PTRenderer.h  VolumetricBPTRenderer.cpp  VolumetricBPTRenderer.h  VolumetricPTRenderer.cpp  VolumetricPTRenderer.h
libSLR/Renderers/: AMCMCPPMRenderer.cpp  AMCMCPPMRenderer.h  BidirectionalPathTracingRenderer.cpp  BidirectionalPathTracingRenderer.h  DebugRenderer.cpp  DebugRenderer.h  PathTracingRenderer.cpp  PathTracingRenderer.h  VolumetricBPTRenderer.cpp  VolumetricBPTRenderer.h  VolumetricPathTracingRenderer.cpp  VolumetricPathTracingRenderer.h
libSLR/Scene/: Scene.cpp  Scene.h  TriangleMeshNode.cpp  TriangleMeshNode.h  camera_nodes.cpp  camera_nodes.h  medium_nodes.cpp  medium_nodes.h  node.cpp  node.h  nodes.cpp  nodes.h
libSLR/Surface/: InfiniteSphere.cpp  InfiniteSphere.h  InfinitesimalPoint.cpp  InfinitesimalPoint.h  TriangleMesh.cpp  TriangleMesh.h
libSLR/SurfaceMaterial/: AshikhminShirleyReflectionSurfaceMaterial.cpp  AshikhminShirleyReflectionSurfaceMaterial.h  IBLEmitterSurfaceProperty.cpp  IBLEmitterSurfaceProperty.h  MixedSurfaceMaterial.cpp  MixedSurfaceMaterial.h  ModifiedWardDurReflectionSurfaceMaterial.cpp  ModifiedWardDurReflectionSurfaceMaterial.h  SummedSurfaceMaterial.cpp  SummedSurfaceMaterial.h  basic_emitter_surface_properties.cpp  basic_emitter_surface_properties.h  basic_surface_materials.cpp  basic_surface_materials.h  disney_surface_materials.cpp  disney_surface_materials.h  microfacet_surface_materials.cpp  microfacet_surface_materials.h  (+1 more)
libSLRSceneGraph/: API.cpp  API.h  API.hpp  CMakeLists.txt  InfiniteSphereNode.cpp  InfiniteSphereNode.h  InfinitesimalPointNode.cpp  InfinitesimalPointNode.h  Scene.cpp  Scene.h  TriangleMeshNode.cpp  TriangleMeshNode.h  camera_nodes.cpp  camera_nodes.h  declarations.h  images.cpp  images.h  medium_materials.cpp  medium_materials.h  medium_materials.hpp  medium_nodes.cpp  medium_nodes.h  node_constructor.cpp  node_constructor.h  nodes.cpp  nodes.h  references.h  surface_materials.cpp  surface_materials.h  surface_materials.hpp  textures.cpp  textures.h  textures.hpp
(+222 files in other folders)
